src/snapshots/alma__parser__tests__module_parser-66.snap
---
source: src/parser.rs
expression: "parse(\"\\\nmodule Test exposing (main)\n\nmain : Fruit a -> Fruit b -> Fruit c\n\nsignature : Fruit d -> Fruit e -> Fruit f\n\ntest = 5\n\")"

---
Input:

module Test exposing (main)

main : Fruit a -> Fruit b -> Fruit c

signature : Fruit d -> Fruit e -> Fruit f

test = 5


Result:

(
    Module {
        name: ModuleName {
            parts: [
                Node {
                    start: 7,
                    end: 11,
                    line: 1,
                    column: 7,
                    value: CapitalizedIdentifier_ {
                        name: SymbolU32 {
                            value: 1,
                        },
                    },
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [
            Node {
                start: 22,
                end: 26,
                line: 1,
                column: 22,
                value: Identifier(
                    Node {
                        start: 22,
                        end: 26,
                        line: 1,
                        column: 22,
                        value: Identifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                        },
                    },
                ),
            },
        ],
        imports: [],
        definitions: [
            TypeSignature(
                TypeSignature {
                    name: Node {
                        start: 29,
                        end: 33,
                        line: 3,
                        column: 0,
                        value: Identifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                        },
                    },
                    typ: Fun(
                        [
                            App(
                                Node {
                                    start: 36,
                                    end: 43,
                                    line: 3,
                                    column: 7,
                                    value: Constructor_ {
                                        name: Node {
                                            start: 36,
                                            end: 41,
                                            line: 3,
                                            column: 7,
                                            value: CapitalizedIdentifier_ {
                                                name: SymbolU32 {
                                                    value: 3,
                                                },
                                            },
                                        },
                                        params: [
                                            Var(
                                                Node {
                                                    start: 42,
                                                    end: 43,
                                                    line: 3,
                                                    column: 13,
                                                    value: Identifier_ {
                                                        name: SymbolU32 {
                                                            value: 4,
                                                        },
                                                    },
                                                },
                                            ),
                                        ],
                                    },
                                },
                            ),
                            App(
                                Node {
                                    start: 47,
                                    end: 54,
                                    line: 3,
                                    column: 18,
                                    value: Constructor_ {
                                        name: Node {
                                            start: 47,
                                            end: 52,
                                            line: 3,
                                            column: 18,
                                            value: CapitalizedIdentifier_ {
                                                name: SymbolU32 {
                                                    value: 3,
                                                },
                                            },
                                        },
                                        params: [
                                            Var(
                                                Node {
                                                    start: 53,
                                                    end: 54,
                                                    line: 3,
                                                    column: 24,
                                                    value: Identifier_ {
                                                        name: SymbolU32 {
                                                            value: 5,
                                                        },
                                                    },
                                                },
                                            ),
                                        ],
                                    },
                                },
                            ),
                        ],
                        App(
                            Node {
                                start: 58,
                                end: 65,
                                line: 3,
                                column: 29,
                                value: Constructor_ {
                                    name: Node {
                                        start: 58,
                                        end: 63,
                                        line: 3,
                                        column: 29,
                                        value: CapitalizedIdentifier_ {
                                            name: SymbolU32 {
                                                value: 3,
                                            },
                                        },
                                    },
                                    params: [
                                        Var(
                                            Node {
                                                start: 64,
                                                end: 65,
                                                line: 3,
                                                column: 35,
                                                value: Identifier_ {
                                                    name: SymbolU32 {
                                                        value: 6,
                                                    },
                                                },
                                            },
                                        ),
                                    ],
                                },
                            },
                        ),
                    ),
                },
            ),
            TypeSignature(
                TypeSignature {
                    name: Node {
                        start: 67,
                        end: 76,
                        line: 5,
                        column: 0,
                        value: Identifier_ {
                            name: SymbolU32 {
                                value: 7,
                            },
                        },
                    },
                    typ: Fun(
                        [
                            App(
                                Node {
                                    start: 79,
                                    end: 86,
                                    line: 5,
                                    column: 12,
                                    value: Constructor_ {
                                        name: Node {
                                            start: 79,
                                            end: 84,
                                            line: 5,
                                            column: 12,
                                            value: CapitalizedIdentifier_ {
                                                name: SymbolU32 {
                                                    value: 3,
                                                },
                                            },
                                        },
                                        params: [
                                            Var(
                                                Node {
                                                    start: 85,
                                                    end: 86,
                                                    line: 5,
                                                    column: 18,
                                                    value: Identifier_ {
                                                        name: SymbolU32 {
                                                            value: 8,
                                                        },
                                                    },
                                                },
                                            ),
                                        ],
                                    },
                                },
                            ),
                            App(
                                Node {
                                    start: 90,
                                    end: 97,
                                    line: 5,
                                    column: 23,
                                    value: Constructor_ {
                                        name: Node {
                                            start: 90,
                                            end: 95,
                                            line: 5,
                                            column: 23,
                                            value: CapitalizedIdentifier_ {
                                                name: SymbolU32 {
                                                    value: 3,
                                                },
                                            },
                                        },
                                        params: [
                                            Var(
                                                Node {
                                                    start: 96,
                                                    end: 97,
                                                    line: 5,
                                                    column: 29,
                                                    value: Identifier_ {
                                                        name: SymbolU32 {
                                                            value: 9,
                                                        },
                                                    },
                                                },
                                            ),
                                        ],
                                    },
                                },
                            ),
                        ],
                        App(
                            Node {
                                start: 101,
                                end: 108,
                                line: 5,
                                column: 34,
                                value: Constructor_ {
                                    name: Node {
                                        start: 101,
                                        end: 106,
                                        line: 5,
                                        column: 34,
                                        value: CapitalizedIdentifier_ {
                                            name: SymbolU32 {
                                                value: 3,
                                            },
                                        },
                                    },
                                    params: [
                                        Var(
                                            Node {
                                                start: 107,
                                                end: 108,
                                                line: 5,
                                                column: 40,
                                                value: Identifier_ {
                                                    name: SymbolU32 {
                                                        value: 10,
                                                    },
                                                },
                                            },
                                        ),
                                    ],
                                },
                            },
                        ),
                    ),
                },
            ),
            Untyped(
                Pattern(
                    Node {
                        start: 110,
                        end: 114,
                        line: 7,
                        column: 0,
                        value: Identifier(
                            Node {
                                start: 110,
                                end: 114,
                                line: 7,
                                column: 0,
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 11,
                                    },
                                },
                            },
                        ),
                    },
                    Node {
                        start: 117,
                        end: 118,
                        line: 7,
                        column: 7,
                        value: Expression_ {
                            typ: RefCell {
                                value: None,
                            },
                            expr: Float(
                                5.0,
                            ),
                        },
                    },
                ),
            ),
        ],
        type_definitions: [],
    },
    [],
)
