src/snapshots/alma__parser__tests__module_parser-7.snap
---
source: src/parser.rs
expression: "parse(\"module Parent\\n\\nmodule Test\")"

---
Input:

module Parent

module Test

Result:

[
    Module {
        name: ModuleName {
            parts: [
                Node {
                    start: 22,
                    end: 26,
                    line: 3,
                    column: 7,
                    value: Identifier_ {
                        name: "Test",
                        case: Pascal,
                    },
                },
            ],
            full_name: "Test",
        },
        exports: [],
        imports: [],
        definitions: [],
    },
    Module {
        name: ModuleName {
            parts: [
                Node {
                    start: 7,
                    end: 13,
                    line: 1,
                    column: 7,
                    value: Identifier_ {
                        name: "Parent",
                        case: Pascal,
                    },
                },
            ],
            full_name: "Parent",
        },
        exports: [],
        imports: [],
        definitions: [],
    },
]
