src/snapshots/alma__parser__tests__module_parser-8.snap
---
source: src/parser.rs
expression: "parse(\"\\\nmodule Parent\n\nmodule Parent.Test\n\n  a = 1\")"

---
Input:

module Parent

module Parent.Test

  a = 1

Result:

(
    Module {
        name: ModuleName {
            parts: [
                Node {
                    start: 7,
                    end: 13,
                    line: 1,
                    column: 7,
                    value: Identifier_ {
                        name: SymbolU32 {
                            value: 1,
                        },
                        case: Pascal,
                    },
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [],
        imports: [],
        definitions: [],
    },
    [
        Module {
            name: ModuleName {
                parts: [
                    Node {
                        start: 22,
                        end: 28,
                        line: 3,
                        column: 7,
                        value: Identifier_ {
                            name: SymbolU32 {
                                value: 1,
                            },
                            case: Pascal,
                        },
                    },
                    Node {
                        start: 29,
                        end: 33,
                        line: 3,
                        column: 14,
                        value: Identifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                            case: Pascal,
                        },
                    },
                ],
                full_name: SymbolU32 {
                    value: 3,
                },
            },
            exports: [],
            imports: [],
            definitions: [
                Pattern(
                    Node {
                        start: 37,
                        end: 38,
                        line: 5,
                        column: 2,
                        value: Identifier(
                            Node {
                                start: 37,
                                end: 38,
                                line: 5,
                                column: 2,
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 4,
                                    },
                                    case: Camel,
                                },
                            },
                        ),
                    },
                    Node {
                        start: 41,
                        end: 42,
                        line: 5,
                        column: 6,
                        value: Expression_ {
                            typ: RefCell {
                                value: None,
                            },
                            expr: Float(
                                1.0,
                            ),
                        },
                    },
                ),
            ],
        },
    ],
)
