src/snapshots/alma__parser__tests__module_parser-9.snap
---
source: src/parser.rs
expression: "parse(\"\\\nmodule Parent\n\nmodule Parent.Test\n\n  a = 1\n\na = 1\n\")"

---
Input:

module Parent

module Parent.Test

  a = 1

a = 1


Result:

(
    Module {
        name: ModuleName {
            parts: [
                Node {
                    start: 7,
                    end: 13,
                    line: 1,
                    column: 7,
                    value: Identifier_ {
                        name: "Parent",
                        case: Pascal,
                    },
                },
            ],
            full_name: "Parent",
        },
        exports: [],
        imports: [],
        definitions: [
            Pattern(
                Node {
                    start: 44,
                    end: 45,
                    line: 7,
                    column: 0,
                    value: Identifier(
                        Node {
                            start: 44,
                            end: 45,
                            line: 7,
                            column: 0,
                            value: Identifier_ {
                                name: "a",
                                case: Camel,
                            },
                        },
                    ),
                },
                Node {
                    start: 48,
                    end: 49,
                    line: 7,
                    column: 4,
                    value: Expression_ {
                        typ: RefCell {
                            value: None,
                        },
                        expr: Float(
                            1.0,
                        ),
                    },
                },
            ),
        ],
    },
    [
        Module {
            name: ModuleName {
                parts: [
                    Node {
                        start: 22,
                        end: 28,
                        line: 3,
                        column: 7,
                        value: Identifier_ {
                            name: "Parent",
                            case: Pascal,
                        },
                    },
                    Node {
                        start: 29,
                        end: 33,
                        line: 3,
                        column: 14,
                        value: Identifier_ {
                            name: "Test",
                            case: Pascal,
                        },
                    },
                ],
                full_name: "Parent.Test",
            },
            exports: [],
            imports: [],
            definitions: [
                Pattern(
                    Node {
                        start: 37,
                        end: 38,
                        line: 5,
                        column: 2,
                        value: Identifier(
                            Node {
                                start: 37,
                                end: 38,
                                line: 5,
                                column: 2,
                                value: Identifier_ {
                                    name: "a",
                                    case: Camel,
                                },
                            },
                        ),
                    },
                    Node {
                        start: 41,
                        end: 42,
                        line: 5,
                        column: 6,
                        value: Expression_ {
                            typ: RefCell {
                                value: None,
                            },
                            expr: Float(
                                1.0,
                            ),
                        },
                    },
                ),
            ],
        },
    ],
)
